allow liquid tool menu to overflow correctly in the page content editor

--- a/app/assets/stylesheets/manager/ace.css.scss
+++ b/app/assets/stylesheets/manager/ace.css.scss
@@ -1,3 +1,7 @@
+.ace_editors.tab-content {
+  overflow: visible;
+}
+
 .ace {
   border: 1px solid #dfdfdf;
   border-top: none;
